2011-10-05 Pierrick Caillon <pierrick@in-cite.net>
	* API request PTReferential for StopAreaList (by code only).

2011-10-04 Pierrick Caillon <pierrick@in-cite.net>
	* Corrected time reading in CallValue.
	* Added specific list type for Hang elements: HangList. Changed usage in EntryPoint and StopArea.
	* API request NextDeparture.

2011-09-29 Pierrick Caillon <pierrick@in-cite.net>
	* Added Comment node.
	* Added comment attribut in Stop node. Note declared in XSDs.
	* Added CommentList in APIService::getDepartireBoard* methods.
	* Corrected a bug not skipping an XML Node when it does not contain relevant information. Result was then truncated.

2011-09-21 Pierrick Caillon <pierrick@in-cite.net>
	* Added API calls for PTReferential.ModeTypeList and MakeBinaryCriteria. Only ModeType support for MakeBinaryCriteria.

2011-09-20 Pierrick Caillon <pierrick@in-cite.net>
	* Added isDebugEnabled to debug class.

2011-09-15 Pierrick Caillon <pierrick@in-cite.net>
	* Bug: Coordinate convertion is not accurate. There is a nearly fixed noticable translation.

2011-09-02 Pierrick Caillon <pierrick@in-cite.net>
	* Charset fix.
	* EntryPointDefinition convertion fix.
	* Removed echo'ed debug in CoordinateConverter.

2011-08-31 Pierrick Caillon <pierrick@in-cite.net>
	* Integrated the coordinate conversion calls into Coord node.

2011-08-30 Pierrick Caillon <pierrick@in-cite.net>
	* Scope fixes
	* Lambert II Extended to WGS84 and reverse converter. Still under testing.

2011-08-26 Pierrick Caillon <pierrick@in-cite.net>
	* Added: VehicleJourney and Route nodes.
	* Parsing for VehicleJourney, Route, Line, ModeType, Network, Forward, Backward, Segment, RoutePoint and Stop nodes. Update Section node.
	* API Requests StreetNetwork, PTReferential for NetworkList and LineList, RoutePointList and DepartureBoard.
	* Added method to retrieve the last query parameters used to query NAViTiA.
	* Changed Node::ReadList to public and static to use it in the Service.
